Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44282

Windows (XP style): Enlarging QMdiSubWindow to great sizes causes application to crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.4.1, 5.4.2
    • 5.4.0
    • GUI: Painting
    • None
    • Windows
    • Crash: 9ddcb7784ad49af3efe1a0213545dc6782468cfb (qtbase/5.4, 13.11.2014, 5.4.1) , Handle fail: 276de71be7309601963c87d0f3a658ae399d98e7 (qtbase/5.4, 4.2.2015, 5.4.2)

      Resizing QMdiSubWindow to a big enough size causes the application to crash. It looks like the CreateDIBSection fails:

      QWindowsXPStylePrivate::buffer(w,h), failed to create dibsection (The parameter is incorrect.)
      
      • Run example with -style windowsxp

      Attached backtrace of the issue.

      5.4.2 "windowsxp" QWIDGETSIZE_MAX= 16777215
      WidgetZoomCrash::resizeSubs QSize(12000, 4000)
      WidgetZoomCrash::resizeSubs QSize(48000, 16000)
      QWindowsXPStylePrivate::buffer(48000,15992), CreateDIBSection() failed. (The par
      ameter is incorrect.)
      QWindowsXPStylePrivate::buffer(48000,15992), CreateDIBSection() failed. (The par
      ameter is incorrect.)
      QWindowsXPStylePrivate::buffer(48000,15992), CreateDIBSection() failed. (The par
      ameter is incorrect.)
      QWindowsXPStylePrivate::buffer(48000,15992), CreateDIBSection() failed. (The par
      ameter is incorrect.)
      WidgetZoomCrash::resizeSubs QSize(192000, 64000)
      QWindowsXPStylePrivate::buffer(48000,63992), CreateDIBSection() failed. ()
      QWindowsXPStylePrivate::buffer(192000,63992), CreateDIBSection() failed. ()
      

        1. backtrace.txt
          17 kB
        2. qtbug44282.zip
          2 kB
        3. qtbug44282_diag.diff
          6 kB
        4. qtbug44282_log.txt
          0.7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes