QWindowsXPStylePrivate::buffer(): Improve warnings.

Task-number: QTBUG-44282
Change-Id: If617db5c6eae410042394f20855892a2c564e808
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>